[package]
name = "rust-crawler"
version = "0.1.0"
authors = ["Cyril Mizzi <cyril.mizzi@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
log = "0.4.11"
select = "0.5.0"
futures = "0.3.5"
env_logger = "0.7.1"
error-chain = "0.12.4"